--- a/README
+++ b/README
@@ -1160,7 +1160,7 @@ The website application traefik labels are below: (this is what creates the HTTP
 
 
 
-## Python backup-checker application (source code) deployment with gitlab:
+## GITLAB PROJECT2: Python backup-checker application (source code) deployment with gitlab:
 
 This is a deployment of a full fledged application with a multi-stage .gitlab-ci.yml pipeline configuration file.
 
@@ -1221,7 +1221,7 @@ There are several issues that have to be addressed with this python application 
 
 
 
-## extending this gitlab VPS setup to deploy a weather app (source code) to AWS K8s EKS cluster using helm:
+## GITLAB PROJECT3: extending this gitlab VPS setup to deploy a weather app (source code) to AWS K8s EKS cluster using helm:
 
 The VPS gitlab environment will run the pipeline against an EKS cluster in AWS using helm.
 This will be an extension to a more complete CI/CD pipeline from a software development lifecycle perspective, involving multiple stages like BUILD, PROMOTE, DEPLOY, etc......
